--- a/html/resume.html
+++ b/html/resume.html
@@ -25,6 +25,6 @@
     </style>
 </head>
 <body>
-        <embed src="../pdf/jhyungleeresume.pdf" width="100%"  type="application/pdf">
+        <embed src="../pdf/Daniel Lee Resume.pdf" width="100%"  type="application/pdf">
 </body>
 </html>
