--- a/html/blogs.html
+++ b/html/blogs.html
@@ -20,6 +20,7 @@
             <li>Date: 12-17-2022 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ CyberSecurity Hygiene ]</a></li>
             <li>Date: 11-15-2022 <a href="../writeups/malwareandmalwaretypes.html" target="_top"> [ Understanding Malware and Malware Types ]</a></li>
             <li>Date: 08-20-2023 <a href="../writeups/containersvsvm.html" target="_top"> [ Virtualization: Containers vs VMs ]</a></li>
+            <li>Date: 09-10-2023 <a href="../writeups/attackframeworks.html" target="_top"> [ Understanding Attack Frameworks ]</a></li>
         </ul>
         </ul>
     </div> 
