--- a/html/whoami.html
+++ b/html/whoami.html
@@ -25,11 +25,11 @@
         </br>
         </br>
         </br>
-        In addition to my academic pursuits, I have also gained real world experience through two internships I had at Comcast Corporation as a Data Analyst. During my time at Comcast, I worked on several projects which helped me develop skills in data cleaning, visualization, and interpretation by using a wide variety of tools including SQL and Tableau. Although I have experience as a data analyst, I’m passionate about transitioning my career into cybersecurity. My previous experiences in data analysis has taught me the importance of paying close attention to small details, critical thinking, and communication especially with tools and visuals I did not understand. Asking questions to my manager and team members helped me grow with my skillset and problem solving which converted into efficient and effective workflow.
+        In addition to my academic pursuits, I have also gained real world experience through two internships I had at Comcast Corporation as a Data Analyst. During my time at Comcast, I worked on several projects which helped me develop skills in data cleaning, visualization, and interpretation by using a wide variety of tools including SQL and Tableau. Although I have experience as a data analyst, I’m passionate about transitioning my career into cybersecurity. My previous experiences in data analysis has taught me the importance of paying close attention to small details, identifying trends and patterns, critical thinking, and communication especially with tools and visuals I did not understand. Asking questions to my manager and team members helped me grow with my skillset and problem solving which converted into efficient and effective workflow.
         </br>
         </br>
         </br>
-        In summary, I am passionate and excited to bring my experiences both in the classroom, in my projects, and my internships at Comcast to transition into the world of security where I can contribute to the protection of a company’s vital digital assets. 
+        In summary, I am passionate and excited to bring my experiences both in the classroom, in my projects, and my internships at Comcast to transition into the world of security where I can contribute to the protection of a company’s vital digital assets and succeed with their commitment and mission. 
         </br>
         </br>
         </br>
