--- a/html/blogs.html
+++ b/html/blogs.html
@@ -17,6 +17,7 @@
     <div id="div2">
         <h1 id="h1whoami">Writeups: Blog/Learn About Security</h1>
         <ul id="research-links">
+            <li>Date: 10-01-2023 <a href="../writeups/comptiasec.html" target="_top"> [ How I passed the CompTIA Security+ ]</a></li>
             <li>Date: 12-17-2022 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ CyberSecurity Hygiene ]</a></li>
             <li>Date: 11-15-2022 <a href="../writeups/malwareandmalwaretypes.html" target="_top"> [ Understanding Malware and Malware Types ]</a></li>
             <li>Date: 08-20-2023 <a href="../writeups/containersvsvm.html" target="_top"> [ Virtualization: Containers vs VMs ]</a></li>
