--- a/html/research.html
+++ b/html/research.html
@@ -24,6 +24,7 @@
             <li>Date: 07-20-2022 <a href="../writeups/wireshark1.html" target="_top"> [ Decrypting HTTP traffic with WireShark ]</a></li>
             <li>Date: 06-23-2022 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit ]</a></li>
             <li>Date: 09-01-2022 <a href="../writeups/wazuh.html" target="_top"> [ Wazuh ]</a></li>
+            <li>Date: 10-18-2023 <a href="../writeups/stegandobf.html" target="_top"> [ Steganography Made Simple ]</a></li>
         </ul>
     </div> 
 </body>
