added new project

--- a/html/research.html
+++ b/html/research.html
@@ -25,6 +25,7 @@
             <li>Date: 06-23-2022 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit ]</a></li>
             <li>Date: 09-01-2022 <a href="../writeups/wazuh.html" target="_top"> [ Wazuh ]</a></li>
             <li>Date: 10-18-2023 <a href="../writeups/stegandobf.html" target="_top"> [ Steganography Made Simple ]</a></li>
+            <li>Date: 10-25-2023 <a href="../writeups/wazuh.html" target="_top"> [ File Integrity Checker ]</a></li>
         </ul>
     </div> 
 </body>
