--- a/writeups/wazuh.html
+++ b/writeups/wazuh.html
@@ -119,6 +119,7 @@
                 <li>Now to test this, you can create/modify/delete a file and these changes should be shown in the Integrity Monitoring Window of your Wazuh application.</li>
             </ul>
             <img src="../images/wazuh/changesmade.PNG" alt="changesmadewaz1">
-
-
         </p>
+        </div>
+    </body>
+</html>
