--- a/writeups/stegandobf.html
+++ b/writeups/stegandobf.html
@@ -16,7 +16,8 @@
 <body>
     <iframe id="iframe-navlink" src="../html/navlink.html" title="navigation links"></iframe>
     <div id="div3">
-        <h1 id="h1whoami">Steganography with Obfuscation Made Simple </h1>
+        <h1 id="h1whoami">GO#WEBBFUSCATOR</h1>
+        <img src="../images/stegano/web2.png" alt="stega2">
         <h3>What is Steganography? </h3>
         <p>
         Steganography is the act of concealing or hiding a message, file, image, or video within another medium or file in order to conceal its existence. 
@@ -94,10 +95,9 @@
         <h3>GO#WEBBFUSCATOR</h3>
         <p>
         Steganography can be used for both legitimate and illegitimate reasons. In 2022, NASA had released its first images from the Webb Telescope. Some of these images included populer images including the First Deep Field image as well as “Cosmic Cliffs” in Carina image. 
+        <br>
+        <br>
         <img src="../images/stegano/web1.png" alt="stega1">
-        <br>
-        <br>
-        <img src="../images/stegano/web2.png" alt="stega2">
         <br>
         <br>
         These images were popular for a period of time, and had many eyes drawn towards its beauty and detailing. Because of its popularity, it seemed like a perfect attack vector for attackers to prey on victims with. Threat hunters have spotted a new malware campaign which was named “GO#WEBBFUSCATOR” which focused on using image steganography from the famous sapce images by the James Webb telescope. 
