--- a/html/navlink.html
+++ b/html/navlink.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <title>Mangoclient's Portfolio</title>
+    <title>Daniel Lee's Portfolio</title>
 </head>
 <body>
     <ul id="nav-links">
