--- a/writeups/comptiasec.html
+++ b/writeups/comptiasec.html
@@ -17,4 +17,50 @@
     <iframe id="iframe-navlink" src="../html/navlink.html" title="navigation links"></iframe>
     <div id="div3">
         <h1 id="h1whoami">How I passed the CompTIA Security+ </h1>
+        <p>
+        After graduating college in June 2023, I decided I wanted to take the next steps in my career and wanted to take the CompTIA Security+ in order to help solidify my understandings of cybersecurity topics and principles. 
+        </p>
         <h3>What is the CompTIA Security+  </h3>
+        <p>
+        The CompTIA Security+ is a widely recognized certification that helps validates the foundational skills and knowledge required for entry-level cybersecurity roles.
+        <br>
+        <br>
+        The certification is designed to assess and certify the essential skills needed to perform core security functions and pursue a career in cybersecurity. The breakdown of the exam based on topics included: 
+        <ul>
+            <li>1.0 Attacks, Threats, and Vulnerabilities 24% </li>
+            <li>2.0 Architecture and Design 21 % </li>
+            <li>3.0 Implementation 25% </li>
+            <li>4.0 Operations and Incident Response 16%</li>
+            <li>5.0 Governance, Risk, and Compliance 14% </li>
+        </ul>
+        The exam is has a maximum of 90 questions of multiple choice and performance-based questions. It is 90 minutes long and you will need a 750 on a scale of 100-900 in order to pass. 
+        </p>
+        <h3>What did I do to help me pass? </h3>
+        <p>
+        During my study periods, I studied by reading the book, “CompTIA Security+ Get Certified Get Ahead: SY0-601 Study Guide”.
+        <br>
+        <br>
+        While reading through each chapter, I would highlight vocabulary terms that I learned and add them to index cards for review at the end of each chapter.  Using this method helped me quickly memorize and understand terminology as well as understand different concepts. 
+        <br>
+        <br>
+        On-top of reading, I would often use Professor Messer’s YouTube channel in order to touch up on topic that I did not understand or topics I needed further review on. 
+        <br>
+        <br>
+        Lastly, I was able to practice the new topics and lessons I learned by taking free practice tests from the CompTIA Security+ Get Certified Get Ahead: SY0-601 Study Guide book as well as free online sources that give free questions as practice. 
+        </p>
+        <h3>Tips I used to Help</h3>
+        <ul>
+            <li>I believe the #1 tip is to give yourself time and space the material out to avoid burnout. Give yourself a schedule.</li>
+            <li>Understand people have different learning styles and use the approach that best suits you when tackling the material.</li>
+            <li>Instead of focusing on just memorizing the material, try to understand the material logically as this helped me grasp topics overall instead of relying on just memorizing. </li>
+            <li>Lastly, practice exam questions so you understand what to expect on the day of the real exam. </li>
+        </ul>
+        <h3>Sources</h3>
+        <p>Below I've listed links to sources I used to help me during the studying process.</p>
+        <li><a href="https://www.comptia.org/certifications/security " id="keylog-link">CompTIA Security+ Exam Information Official Site </a></li>
+        <li><a href="https://www.amazon.com/CompTIA-Security-Get-Certified-Ahead-ebook/dp/B09237T9ZB" id="keylog-link">CompTIA Security+ Get Certified Get Ahead: SY0-601 Study Guide </a></li>
+        <li><a href="https://www.youtube.com/@professormesser " id="keylog-link">Professor Messer’s YouTube Channel </a></li>
+        <li><a href="https://www.examcompass.com/comptia-security-plus-practice-test-1-exam-sy0-601" id="keylog-link">CompTIA Security+ Practice Exam Questions </a></li>
+    </div>
+</body>
+</html>
