added new project

--- a/html/research.html
+++ b/html/research.html
@@ -25,7 +25,8 @@
             <li>Date: 06-23-2022 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit - an all in one port reconnaissance tool]</a></li>
             <li>Date: 09-01-2022 <a href="../writeups/wazuh.html" target="_top"> [ Wazuh ]</a></li>
             <li>Date: 10-18-2023 <a href="../writeups/stegandobf.html" target="_top"> [ GO#WEBBFUSCATOR ]</a></li>
-            <li>Date: 10-25-2023 <a href="../writeups/fileintegritychecker.html" target="_top"> [ File Integrity Checker ]</a></li>
+            <li>Date: 02-04-2024 <a href="../writeups/fileintegritychecker.html" target="_top"> [ File Integrity Checker ]</a></li>
+            <li>Date: 03-31-2024 <a href="../writeups/cowriehoneypot.html" target="_top"> [ Steer Attackers Away with Honey ]</a></li>
         </ul>
     </div> 
 </body>
