--- a/writeups/comptiasec.html
+++ b/writeups/comptiasec.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <title>How I passed the CompTIA Security+ - Mangoclient's Portfolio</title>
+    <title>How I passed the CompTIA Security+ - Daniel Lee's Portfolio</title>
 </head>
 <body>
     <iframe id="iframe-navlink" src="../html/navlink.html" title="navigation links"></iframe>
