--- a/html/blogs.html
+++ b/html/blogs.html
@@ -25,7 +25,7 @@
             <li>Date: 03-20-2024 <a href="../writeups/currentnews/apexhack.html" target="_top"> [ The Apex Legends Hack Incident ]</a></li>
             <li>Date: 03-21-2024 <a href="../writeups/currentnews/m1chipleak.html" target="_top"> [ Apple M1 Unpatchable Vulnerability ]</a></li>
             <li>Date: 03-29-2024 <a href="../writeups/currentnews/linuxpe.html" target="_top"> [ Linux PE Exploit CVE-2024-1086 ]</a></li>
-        </ul>
+            <li>Date: 04-02-2024 <a href="../writeups/currentnews/uspsphishing.html" target="_top"> [ USPS and Phishing Attacks ]</a></li>
         </ul>
     </div> 
 </body>
