--- a/writeups/currentnews/uspsphishing.html
+++ b/writeups/currentnews/uspsphishing.html
@@ -11,13 +11,80 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <title>USPS and Phishing Attacks - Daniel Lee's Portfolio</title>
+    <title>USPS and Phishing Attacks 🎣 - Daniel Lee's Portfolio</title>
 </head>
 <body>
     <iframe id="iframe-navlink" src="../../html/navlink.html" title="navigation links"></iframe>
     <div id="div3">
-        <h1 id="h1whoami">USPS and Phishing Attacks </h1>
-        <h3>The Attack  </h3>
+        <h1 id="h1whoami">USPS and Phishing Attacks 🎣  </h1>
+        <h3>About USPS</h3>
+        <p>
+        USPS, United States Postal Service, is a federal government agency that is responsible for providing postal services in the US. 
+        <br>
+        <br>
+        USPS delivers mail and packages to homes and businesses and has a large operational network of post offices and facilities scattered across the country. 
+        <br>
+        <br>
+        They make it easy for customers to view tracking numbers, status of orders by simply sending a text message to their phone, clicking on a link that redirects them to a website that posts the status of their package. 
+        </p>
+        <h3>The Statistics</h3>
+        <p>
+        According to recent reports, USPS has jumped to first place when it comes to being the prime target for phishing impersonations. 
+        <br>
+        <br>
+        When it comes to the numbers, USPS was impersonated on a total of 11.6% of all phishing attempts in communication and online transactions. 
+        <br>
+        <br>
+        The following includes a list of all percentage impersonations for the top ten brands: 
+            <ol>
+                <li>USPS (11.6%)</li>
+                <li>Microsoft (9.3%)</li>
+                <li>Meta (6.3%)</li>
+                <li>Steam (3.2%)</li>
+                <li>Telegram (2.9%)</li>
+                <li>AT&T (2.7%)</li>
+                <li>Charles Schwab (2.6%)</li>
+                <li>Uniswap (2.3%)</li>
+                <li>DHL (2.3%)</li>
+                <li>One Drive (2.0%))</li>
+            </ol>
+        </p>
+        <h3>What is Phishing?</h3>
+        <p>
+        Phishing is a type of attack whose main purpose is to trick user/victims into revealing personal information or clicking a link. 
+        <br>
+        <br>
+        A phishing attack can often be a user clicking a link that leads them to a malicious website that appears to be legitimate. 
+        <br>
+        <br>
+        Other times, it includes a malicious attachment and encourages a user to open it. 
+        <br>
+        <br>
+        Once a user clicks on a link, attackers can gain access to accounts, systems, steal sensitive information including credit card information, personal identity, or even attempt a drive-by download of malware onto a system.
+        <br>
+        <br>
+        Since USPS often relies on sending a text or email that helps users view package and tracking information, it is a perfect opportunity for attackers to pose as USPS, sendin a fake website that can be used to steal information about a users credentials or privates. 
+        </p>
+        <h3>How can you prevent being phished?</h3>
+        <p>
+        Phishing scams are something that can be dangerous, especially if you fallen into a trap. However, there are some methods and steps you can take to help prevent falling victim to a phishing attack.
+        <br>
+        <br>
+        Make sure you are cautious with emails. Being skeptical and double checking the email address before opening any links can be one of the best ways to defend yourself. 
+        <br>
+        <br>
+        Be cautious on social media and other websites. Make sure you are not oversharing personal information on platforms, as this information can be used back to you to specify an attack towards you personally.
+        <br>
+        <br>
+        Having security software can also be a plus. Sometimes some applications such as Gmail have reputable antivirus or anti-phishing software that can help filter out spam and other suspicious emails. 
+        <br>
+        <br>
+        Having software can also give you a pop-up verifying if you are sure you want to click on a specific link before taking you to that site. 
+        <br>
+        <br>
+        All in all, staying educated can help with preventing these attacks. Learning about common techniques and tactics used by criminals can help. 
+        </p>
+        <a href="https://www.infosecurity-magazine.com/news/phishing-smishing-surge-targets-us/" id="keylog-link">Read More Here: https://www.infosecurity-magazine.com/news/phishing-smishing-surge-targets-us/  </a>
     </div>
 </body>
 </html>
