--- a/html/research.html
+++ b/html/research.html
@@ -18,12 +18,13 @@
         <h1 id="h1whoami">Writeups: Research/Projects/Labs</h1>
         <ul id="research-links">
             <li>Date: 01-04-2022 <a href="../writeups/keylogger.html" target="_top"> [ keylogger ]</a></li>
-            <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ What is evilginx2? ]</a></li>
+            <li>Date: 04-20-2022 <a href="../writeups/awsminecraft.html" target="_top"> [ Every Kid's Dream..a Minecraft server ]</a></li>
+            <li>Date: 03-20-2022 <a href="../writeups/2fabypass.html" target="_top"> [ What is evilginx2? ]</a></li>
             <li>Date: 04-02-2023 <a href="../writeups/snort1.html" target="_top"> [ Snort Intrusion Detection and Logging ]</a></li>
             <li>Date: 08-10-2023 <a href="../writeups/splunk1.html" target="_top"> [ Security Event Monitoring with Splunk ]</a></li>
-            <li>Date: 07-20-2022 <a href="../writeups/wireshark1.html" target="_top"> [ Decrypting HTTP traffic with WireShark ]</a></li>
-            <li>Date: 06-23-2022 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit - an all in one port reconnaissance tool]</a></li>
-            <li>Date: 09-01-2022 <a href="../writeups/wazuh.html" target="_top"> [ Wazuh ]</a></li>
+            <li>Date: 08-20-2023 <a href="../writeups/wireshark1.html" target="_top"> [ Decrypting HTTP traffic with WireShark ]</a></li>
+            <li>Date: 06-23-2023 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit - a port reconnaissance tool]</a></li>
+            <li>Date: 09-01-2023 <a href="../writeups/wazuh.html" target="_top"> [ Wazuh ]</a></li>
             <li>Date: 10-18-2023 <a href="../writeups/stegandobf.html" target="_top"> [ GO#WEBBFUSCATOR ]</a></li>
             <li>Date: 02-04-2024 <a href="../writeups/fileintegritychecker.html" target="_top"> [ File Integrity Checker ]</a></li>
             <li>Date: 03-31-2024 <a href="../writeups/cowriehoneypot.html" target="_top"> [ Steer Attackers Away with Honey ]</a></li>
