--- a/html/blogs.html
+++ b/html/blogs.html
@@ -24,6 +24,7 @@
             <li>Date: 09-10-2023 <a href="../writeups/attackframeworks.html" target="_top"> [ Understanding Attack Frameworks ]</a></li>
             <li>Date: 03-20-2024 <a href="../writeups/currentnews/apexhack.html" target="_top"> [ The Apex Legends Hack Incident ]</a></li>
             <li>Date: 04-02-2024 <a href="../writeups/currentnews/uspsphishing.html" target="_top"> [ USPS and Phishing Attacks 🎣  ]</a></li>
+            <li>Date: 05-01-2024 <a href="../writeups/securitytopics/practicestrongpwd.html" target="_top"> [ Practicing Strong Password Habits ]</a></li>
         </ul>
     </div> 
 </body>
