--- a/html/research.html
+++ b/html/research.html
@@ -28,6 +28,7 @@
             <li>Date: 10-18-2023 <a href="../writeups/stegandobf.html" target="_top"> [ GO#WEBBFUSCATOR ]</a></li>
             <li>Date: 02-04-2024 <a href="../writeups/fileintegritychecker.html" target="_top"> [ File Integrity Checker ]</a></li>
             <li>Date: 03-31-2024 <a href="../writeups/cowriehoneypot.html" target="_top"> [ Steer Attackers Away with Honey ]</a></li>
+            <li>Date: 05-02-2024 <a href="../writeups/jtr1.html" target="_top"> [ Crack a Hash with John the Ripper ]</a></li>
         </ul>
     </div> 
 </body>
