--- a/html/research.html
+++ b/html/research.html
@@ -29,6 +29,7 @@
             <li>Date: 02-04-2024 <a href="../writeups/fileintegritychecker.html" target="_top"> [ File Integrity Checker ]</a></li>
             <li>Date: 03-31-2024 <a href="../writeups/cowriehoneypot.html" target="_top"> [ Steer Attackers Away with Honey ]</a></li>
             <li>Date: 05-02-2024 <a href="../writeups/jtr1.html" target="_top"> [ Crack a Hash with John the Ripper ]</a></li>
+            <li>Date: 06-24-2024 <a href="../writeups/caesarcypher.html" target="_top"> [ Caesar Cypher ]</a></li>
         </ul>
     </div> 
 </body>
