crowdstrike outage blog

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -25,6 +25,7 @@
             <li>Date: 03-20-2024 <a href="../writeups/currentnews/apexhack.html" target="_top"> [ The Apex Legends Hack Incident ]</a></li>
             <li>Date: 04-02-2024 <a href="../writeups/currentnews/uspsphishing.html" target="_top"> [ USPS and Phishing Attacks 🎣  ]</a></li>
             <li>Date: 05-01-2024 <a href="../writeups/securitytopics/practicestrongpwd.html" target="_top"> [ Practicing Strong Password Habits ]</a></li>
+            <li>Date: 07-20-2024 <a href="../writeups/currentnews/crowdstrikeoutage.html" target="_top"> [ The Crowdstrike Outage 🦅 ]</a></li>
         </ul>
     </div> 
 </body>
